# Software_Review_GUI

./: README.md
Software_Review_GUI/: CMakeLists.txt  filereader.cpp  filereader.h  filewriter.cpp  filewriter.h  listreader.cpp  listreader.h  listwriter.cpp  listwriter.h  main.cpp  software.cpp  software.h  softwaregui.cpp  softwaregui.h  softwarelist.cpp  softwarelist.h
